--- a/404.html
+++ b/404.html
@@ -24,7 +24,7 @@ body, html {
 }
 
 /* Images used */
-.img1 { background-image: url("404.jpg"); }
+.img1 { background-image: url("https://data.whicdn.com/images/350371234/original.gif?t=1604916037"); }
 
 /* Position text in the middle of the page/image */
 .bg-text {
