--- a/404.html
+++ b/404.html
@@ -1,6 +1,5 @@
 <html>
 <head>
-    <title>404 not found</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 body, html {
@@ -24,7 +23,7 @@ body, html {
 }
 
 /* Images used */
-.img1 { background-image: url("https://data.whicdn.com/images/350371234/original.gif?t=1604916037"); }
+.img1 { background-image: url("404.jpg"); }
 
 /* Position text in the middle of the page/image */
 .bg-text {
@@ -49,7 +48,6 @@ body, html {
 <div class="bg-image img1"></div>
 
 <div class="bg-text">404<br>NOT FOUND THE PAGE</div>
-<b><center>by swagcode</b>
 
 </body>
 </html>
