--- a/404.html
+++ b/404.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+    <link rel="icon" href="todaylogo.jpg"/>
     <title>404 not found</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
@@ -49,7 +50,7 @@ body, html {
 <div class="bg-image img1"></div>
 
 <div class="bg-text">404<br>NOT FOUND THE PAGE</div>
-<b><center>by swagcode</b>
+<b><center><font size="2">2021 All Right Reserved @swagcode</b>
 
 </body>
 </html>
