--- a/404.html
+++ b/404.html
@@ -25,7 +25,7 @@ body, html {
 }
 
 /* Images used */
-.img1 { background-image: url("https://data.whicdn.com/images/350371234/original.gif?t=1604916037"); }
+.img1 { background-image: url("today404.gif"); }
 
 /* Position text in the middle of the page/image */
 .bg-text {
