--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
+<All Right Reserved by swagcodes>
 <html>
 <head>
+    <script src="https://cdn.rawgit.com/bungfrangki/efeksalju/2a7805c7/efek-salju.js" type="text/javascript"></script>
+    <div class="">
+    <link rel="icon" href="todaylogo.jpg"/>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 body, html {
@@ -24,10 +28,6 @@ body, html {
 
 /* Images used */
 .img1 { background-image: url("today1.jpg"); }
-.img2 { background-image: url("today2.jpg"); }
-.img3 { background-image: url("today3.jpg"); }
-.img4 { background-image: url("today4.jpg"); }
-.img5 { background-image: url("today5.jpg"); }
 
 /* Position text in the middle of the page/image */
 .bg-text {
@@ -50,13 +50,9 @@ body, html {
 </head>
 <body>
 <div class="bg-image img1"></div>
-<div class="bg-image img2"></div>
-<div class="bg-image img3"></div>
-<div class="bg-image img4"></div>
-<div class="bg-image img5"></div>
 
 <div class="bg-text"><button onclick="play()" type="button">play</button>
-<button onclick="stop()" type="button">pause</button><audio id="audioID" autoplay loop> <source src="today.mp3"  type="audio/mp3"></audio>
+<button onclick="stop()" type="button">stop</button><audio id="audioID" autoplay loop> <source src="today.mp3"  type="audio/mp3"></audio>
 <script>
 var myaudio = document.getElementById("audioID");
 
@@ -68,6 +64,6 @@ function stop() {
 return myaudio.pause();
 };
 </script><br>TODAY<a href="https://chat.whatsapp.com/HOnoH7dO0MnCDYzh2ELLjX"><img border="0" src="https://i.postimg.cc/mk7nv01P/5ae21cc526c97415d3213554.png" width="200" height="200"></a></div>
-
+<b><center><font size="2">2021 All Right Reserved @swagcode</b>
 </body>
 </html>
