--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@ return myaudio.play();
 function stop() {
 return myaudio.pause();
 };
-</script><br>TODAY<a href="https://chat.whatsapp.com/HOnoH7dO0MnCDYzh2ELLjX"><img border="0" src="https://i.postimg.cc/mk7nv01P/5ae21cc526c97415d3213554.png" width="200" height="200"></a></div>
+</script><br>TODAY<a href="https://chat.whatsapp.com/HOnoH7dO0MnCDYzh2ELLjX"><img border="0" src="https://i.postimg.cc/mk7nv01P/5ae21cc526c97415d3213554.png" width="200" height="200"></a>
+    <a href="game.htm">game</a></div>
 <b><center><font size="2">2021 All Right Reserved @swagcode</b>
 </body>
 </html>
