--- a/game.htm
+++ b/game.htm
@@ -9,6 +9,6 @@
 <span style="color: rgb(242, 239, 239);">
 </head>
 <body>
-    <b><font size="10">Daftar Game:<br>1. <a href="game-tank.html">Tank-Destroyer</a> (pc)<br>2. <a href="game-star-battle.html">Star-Battle</a> (pc)</b>
+    <b><font size="10">Daftar Game:<br>1. <a href="game-tank.html">Tank-Destroyer</a> (pc)<br>2. <a href="game-star-battle.html">Star-Battle</a> (pc)<br>3. <a href="snake-and-ladder.html">Snake-and-Ladder</a> (all devices)</b>
 </body>
 </html>
