--- a/index.html
+++ b/index.html
@@ -63,8 +63,7 @@ return myaudio.play();
 function stop() {
 return myaudio.pause();
 };
-</script><br>TODAY<a href="https://chat.whatsapp.com/HOnoH7dO0MnCDYzh2ELLjX"><img border="0" src="https://i.postimg.cc/mk7nv01P/5ae21cc526c97415d3213554.png" width="200" height="200"></a>
-    <a href="game.htm">game</a></div>
-<b><center><font size="2">2021 All Right Reserved @swagcode</b>
+</script><br>TODAY<a href="https://chat.whatsapp.com/HOnoH7dO0MnCDYzh2ELLjX"><img border="0" src="https://i.postimg.cc/mk7nv01P/5ae21cc526c97415d3213554.png" width="200" height="200"></a></div>
+<b><center><font size="2">2021 All Right Reserved </b><a href="http://swag.hackx.com">@swagcode</a>
 </body>
 </html>
