--- a/404.html
+++ b/404.html
@@ -50,7 +50,7 @@ body, html {
 <div class="bg-image img1"></div>
 
 <div class="bg-text">404<br>NOT FOUND THE PAGE</div>
-<b><center><font size="2">2021 All Right Reserved @swagcode</b>
+<b><center><font size="2">2021 All Right Reserved </b><a href="http://swag.hackx.com">@swagcode</a>
 
 </body>
 </html>
